Context for Subjects included Tokens accessible from Subject Tokens accessible by name